[package]
name = "ferron"
version = "2.5.0"
edition = "2021"

[dependencies]
# Ferron internal dependencies
ferron-common = { workspace = true }
ferron-load-modules = { workspace = true }

# Error Handling & Utilities
anyhow = "1.0.98"
arc-swap = "1.8.0"
send_wrapper = { version = "0.6.0", optional = true, features = ["futures"] }
human-panic = "2.0.2"
hashlink = "0.11.0"
chrono = "0.4.41"
fancy-regex = "0.17.0"
glob = "0.3.2"
urlencoding = "2.1.3"
miette = { version = "7.6.0", features = ["fancy"] }

# HTTP/Web Server Core
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["client"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11.8", default-features = false, features = [
    "aws-lc-rs",
    "rustls-aws-lc-rs",
    "runtime-tokio",
] }
http-body-util = "0.1.3"
httpdate = "1.0.3"
socket2 = "0.6.0"
ppp = "2.3.0"

# TLS/Security
rustls = { version = "0.23.27", default-features = false, features = [
    "tls12",
    "std",
    "aws-lc-rs",
] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
    "tls12",
    "aws-lc-rs",
] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "tls12",
    "aws-lc-rs",
    "http1",
    "http2",
    "native-tokio",
] }
instant-acme = { version = "0.8.4", default-features = false, features = [
    "hyper-rustls",
    "aws-lc-rs",
    "rcgen",
    "time",
    "x509-parser"
] }
rustls-native-certs = "0.8.1"
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
webpki-roots = "1.0.2"
ocsp-stapler = { version = "0.4.7", default-features = false, features = [
    "aws-lc-rs",
] }
x509-parser = "0.18.0"
rcgen = { version = "0.14.1", default-features = false, features = [
    "crypto",
    "aws_lc_rs",
    "pem",
] }
base64 = "0.22.1"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }

# Async Runtime & Concurrency
tokio = { version = "1.45.0", features = [
    "fs",
    "io-util",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
monoio = { version = "0.2.4", optional = true, features = [
    "poll-io",
    "sync",
    "threadpool"
] }
monoio-compat = { version = "0.2.2", optional = true, features = ["hyper"] }
async-channel = "2.3.1"
futures-util = { version = "0.3.31", features = ["sink"] }
blocking = { version = "1.6.1", optional = true }
tokio-util = "0.7.15"
futures-executor = { version = "0.3.31", optional = true }

# Data Handling & Serialization
bytes = { version = "1.10.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
kdl = { workspace = true }
ferron-yaml2kdl-core = { path = "../ferron-yaml2kdl-core", optional = true }
regorus = { version = "0.9.1", default-features = false, features = [
  "arc",
  "regex",
  "glob",
  "base64",
  "base64url",
  "hex",
  "urlquery",
  "uuid",
  "semver"
]}

# CLI & Configuration
clap = { version = "4.5.38", features = ["cargo", "derive"] }
dirs = "6.0.0"

# Performance & Utilities
smallvec = { version = "1.15.0", features = [
    "write",
    "union",
    "const_generics",
] }

# Build information
shadow-rs = { version = "1.2.0", default-features = false }
tempfile = "3.24.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
# Process metrics
procfs = { version = "0.18.0", default-features = false }

[target.'cfg(target_arch = "x86")'.dependencies]
mimalloc = { workspace = true } # Mimalloc v3 would use instructions unsupported by old 32-bit-only x86 CPUs

[target.'cfg(not(target_arch = "x86"))'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[dev-dependencies]
shiba = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
shadow-rs = { version = "1.2.0", default-features = false, features = [
    "build",
] }

[features]
default = ["config-yaml-legacy", "runtime-monoio"]
default-tokio = ["config-yaml-legacy", "runtime-tokio"]
config-docker-auto = []
config-yaml-legacy = ["ferron-yaml2kdl-core"]
runtime-monoio = [
    "monoio",
    "monoio-compat",
    "blocking",
    "send_wrapper",
    "ferron-common/runtime-monoio",
    "ferron-load-modules/runtime-monoio",
]
runtime-tokio = [
    "tokio/full",
    "futures-executor",
    "hyper-util/tokio",
    "ferron-common/runtime-tokio",
    "ferron-load-modules/runtime-tokio",
]
