[package]
name = "project-karpacz-mod-example"
version = "0.6.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
http-body-util.workspace = true
hyper.workspace = true
project-karpacz-common = { workspace = true }
tokio.workspace = true
mimalloc = { workspace = true }

[dev-dependencies]
rusty-hook = { workspace = true }

[lib]
crate-type = ["dylib"]
