[package]
name = "project-karpacz-passwd"
version = "0.1.0"
edition = "2021"

[package.metadata.winresource]
ProductName = "Project Karpacz password utility"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
password-auth.workspace = true
rpassword = "7.3.1"
yaml-rust2.workspace = true
mimalloc = { workspace = true }

[dev-dependencies]
rusty-hook = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
