[package]
name = "project-karpacz"
version = "0.1.0"
edition = "2021"

[package.metadata.winresource]
ProductName = "Project Karpacz"

[dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
rustls = "0.23.22"
tokio-rustls = "0.26.1"
rustls-pki-types = "1.11.0"
rustls-pemfile = "2.2.0"
yaml-rust2 = { workspace = true }
anyhow = "1.0.95"
futures-util = "0.3.31"
chrono = "0.4.39"
async-trait = { workspace = true }
project-karpacz-common = { workspace = true }
libloading = "0.8.6"
rustls-native-certs = "0.8.1"
ocsp-stapler = "0.4.1"
clap = { version = "4.5.28", features = ["derive"] }
fancy-regex = "0.14.0"
password-auth = { workspace = true }
base64 = "0.22.1"
lru = "0.13.0"
sha2 = "0.10.8"
new_mime_guess = "4.0.4"
async-compression = { version = "0.4.18", features = ["tokio", "gzip", "brotli", "deflate", "zstd"] }
urlencoding = "2.1.3"
async-channel = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rusty-hook = { workspace = true }

[build-dependencies]
winresource = "0.1.19"
