[package]
name = "ferron-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
http = "1"

ferron-core = { path = "../ferron-core" }
ferron-runtime = { path = "../ferron-runtime" }
ferron-module-api = { path = "../ferron-module-api" }
ferron-http = { path = "../ferron-http" }
futures-util = "0.3.32"
