[package]
name = "ferron-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
http = "1"

ferron-runtime = { path = "../ferron-runtime" }
ferron-module-api = { path = "../ferron-module-api" }
ferron-http = { path = "../ferron-http" }
ferron-registry = { path = "../ferron-registry" }
