[package]
name = "ferron-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
http = "1"

ferron-core = { path = "../ferron-core" }
ferron-runtime = { path = "../ferron-runtime" }
ferron-module-api = { path = "../ferron-module-api" }
