[package]
name = "ferron-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

ferron-core = { path = "../ferron-core" }
ferron-runtime = { path = "../ferron-runtime" }
ferron-module-api = { path = "../ferron-module-api" }
