[package]
name = "ferron-admin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt", "sync", "macros"] }
tokio-util = "0.7"
arc-swap = "1.7"

ferron-core = { path = "../../core" }
ferron-admin = { path = "../../types/admin" }
