[package]
name = "ferron-http-basicauth"
version = "3.0.0-alpha.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
vibeio = { version = "0.2.6", default-features = false }
parking_lot = "0.12"
http = "1"
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
password-auth = { version = "1.0", features = ["pbkdf2", "scrypt"] }

ferron-core = { path = "../../core" }
ferron-http = { path = "../../types/http" }
ferron-observability = { path = "../../types/observability" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
ferron-observability = { path = "../../types/observability" }
typemap_rev = "0.4"
rustc-hash = "2"
